Page d'accueil du site, il reste les commentaires à insérer.

--- a/index.html
+++ b/index.html
@@ -7,34 +7,37 @@
   </head>
  <body>
  <header>
-  <img src="assets/NewTux.png" alt="Le Pingouin de Linux" />
-  <h1>Bienvenue sur notre Blog de Christopher Nolan</h1>
+  <h1>Bienvenue sur notre Blog<br> de Christopher Nolan</h1>
   <nav>
   <ul>
-   <li><a href="#">Accueil</a></li>
-   <li><a href="#">Ajouter un article</a></li>
-   <li><a href="#">Rechercher un article</a></li>
-   <li><a href="#">A propos</a></li>
+   <li><a href="index.html">Accueil</a></li>
+   <li><a href="ajout.html">Ajouter un article</a></li>
+   <li><a href="recherche.mtml">Rechercher un article</a></li>
+   <li><a href="propos.html">A propos</a></li>
   </ul>
   </nav>
  </header>
  <section id="corps">
  <article>
-  <h1>Christopher Nolan Test pour git graphique 2</h1>
+  <h1>Un réalisateur britannico-américain</h1>
+  <img width="256" alt="Christopher Nolan à Santa Barbara International Film Festival" src="assets/Christopher_nolan.jpg"/>
+  <p>La photo est de sbclick <a href="http://creativecommons.org/licenses/by/2.0">[CC by 2.0]</a><a href="http://commons.wikimedia.org/wiki/File%3AChristopher_nolan.jpg"> via Wikimedia Commons.</a></p>
+  
   <p>Montius nos tumore inusitato quodam et novo ut rebellis et maiestati 
   recalcitrantes Augustae per haec quae strepit incusat iratus nimirum quod 
   contumacem praefectum, quid rerum ordo postulat ignorare dissimulantem 
   formidine tenus iusserim custodiri.</p>
+  <a href="biographie.html">Lire la suite</a>
  </article>
  <aside>
-  <section>
   <h1>Zone de recherche</h1>
 	<form method="get" action="recherche.html">
-		<input type="search">
+		<input type="search" placeholder="Entrez un mot-clef" name="the_search">
 	</form>
  </aside>
  </section>
  <footer>
+	<img alt="logo de Lyon 1" src="assets/IUTLyon1.png"/>
 	<p>HAFSI Rachida LAKESTANI Diane</p>
  </footer>
  </body>
