Index.html modifié avec ajout de commentaire, page centrée, css modifiée
Signed-off-by: Armays <diane.lakestani@gmail.com>

--- a/index.html
+++ b/index.html
@@ -6,39 +6,50 @@
     <title>Blog sur Christopher Nolan</title>
   </head>
  <body>
- <header>
-  <h1>Bienvenue sur notre Blog<br> de Christopher Nolan</h1>
-  <nav>
-  <ul>
-   <li><a href="index.html">Accueil</a></li>
-   <li><a href="ajout.html">Ajouter un article</a></li>
-   <li><a href="recherche.mtml">Rechercher un article</a></li>
-   <li><a href="propos.html">A propos</a></li>
-  </ul>
-  </nav>
- </header>
- <section id="corps">
- <article>
-  <h1>Un réalisateur britannico-américain</h1>
-  <img width="256" alt="Christopher Nolan à Santa Barbara International Film Festival" src="assets/Christopher_nolan.jpg"/>
-  <p>La photo est de sbclick <a href="http://creativecommons.org/licenses/by/2.0">[CC by 2.0]</a><a href="http://commons.wikimedia.org/wiki/File%3AChristopher_nolan.jpg"> via Wikimedia Commons.</a></p>
-  
-  <p>Montius nos tumore inusitato quodam et novo ut rebellis et maiestati 
-  recalcitrantes Augustae per haec quae strepit incusat iratus nimirum quod 
-  contumacem praefectum, quid rerum ordo postulat ignorare dissimulantem 
-  formidine tenus iusserim custodiri.</p>
-  <a href="biographie.html">Lire la suite</a>
- </article>
- <aside>
-  <h1>Zone de recherche</h1>
-	<form method="get" action="recherche.html">
-		<input type="search" placeholder="Entrez un mot-clef" name="the_search">
-	</form>
- </aside>
- </section>
- <footer>
-	<img alt="logo de Lyon 1" src="assets/IUTLyon1.png"/>
-	<p>HAFSI Rachida LAKESTANI Diane</p>
- </footer>
+	<header>
+		<h1>Bienvenue sur notre Blog<br> de Christopher Nolan</h1>
+		<nav>
+			<ul>
+				<li><a href="index.html">Accueil</a></li>
+				<li><a href="ajout.html">Ajouter un article</a></li>
+				<li><a href="recherche.mtml">Rechercher un article</a></li>
+				<li><a href="propos.html">A propos</a></li>
+			</ul>
+		</nav>
+	</header>
+	<section id="index_content">
+		<section id="corps">
+			<article>
+				<h1>Un réalisateur britannico-américain</h1>
+				<img width="256" alt="Christopher Nolan à Santa Barbara International Film Festival" src="assets/Christopher_nolan.jpg"/>
+				<p>La photo est de sbclick <a href="http://creativecommons.org/licenses/by/2.0">[CC by 2.0]</a><a href="http://commons.wikimedia.org/wiki/File%3AChristopher_nolan.jpg"> via Wikimedia Commons.</a></p>
+	  
+				<p>Montius nos tumore inusitato quodam et novo ut rebellis et maiestati 
+				  recalcitrantes Augustae per haec quae strepit incusat iratus nimirum quod 
+				  contumacem praefectum, quid rerum ordo postulat ignorare dissimulantem 
+				  formidine tenus iusserim custodiri.</p>
+				<a href="biographie.html">Lire la suite</a>
+			</article>
+			<section id="commentaire">
+				<div id="header_commentaire">
+					<h1>Dernier commentaire :</h1>
+				</div>
+				<div id="corps_commentaire">
+					<p>Nolan-Addict 22 mars 2015 15h23</p>
+					<p>J'adore ce réalisateur, je le suis depuis ses débuts, merci pour ce blog !</p>
+				</div>
+			</section>
+		</section>
+		<aside>
+			<h1>Zone de recherche</h1>
+			<form method="get" action="recherche.html">
+			<input type="search" placeholder="Entrez un mot-clef" name="the_search">
+			</form>
+		</aside>
+	</section>
+	<footer>
+		<img alt="logo de Lyon 1" src="assets/IUTLyon1.png"/>
+		<p>HAFSI Rachida LAKESTANI Diane</p>
+	</footer>
  </body>
 </html>
