--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="assets/style.css">
+	<link rel="stylesheet" type="text/css" href="assets/style_petit.css" @media="screen and (max-width :800px)">
+	<link rel="stylesheet" type="text/css" href="assets/style_moyen.css">
+	<link rel="stylesheet" type="text/css" href="assets/style_grand.css">
     <title>Blog sur Christopher Nolan</title>
   </head>
  <body>
