Police du h1 de l'article modifiée
Signed-off-by: Armays <diane.lakestani@gmail.com>

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		</nav>
 	</header>
 	<section id="index_content">
-		<section id="corps">
+		<section id="article_comment">
 			<article>
 				<h1>Un réalisateur britannico-américain</h1>
 				<img width="256" alt="Christopher Nolan à Santa Barbara International Film Festival" src="assets/Christopher_nolan.jpg"/>
@@ -30,11 +30,11 @@
 				  formidine tenus iusserim custodiri.</p>
 				<a href="biographie.html">Lire la suite</a>
 			</article>
-			<section id="commentaire">
-				<div id="header_commentaire">
+			<section id="comment">
+				<div id="comment_header">
 					<h1>Dernier commentaire :</h1>
 				</div>
-				<div id="corps_commentaire">
+				<div id="comment_content">
 					<p>Nolan-Addict 22 mars 2015 15h23</p>
 					<p>J'adore ce réalisateur, je le suis depuis ses débuts, merci pour ce blog !</p>
 				</div>
