--- a/recherche.html
+++ b/recherche.html
@@ -18,8 +18,8 @@
 			</ul>
 		</nav>
 	</header>
-	<section id="search_content">
-		<section id="search_list">
+	<section class="content">
+		<section class="left_side">
 			<h1>Liste des articles</h1>
 			<table>
 				<tr>
