--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 			<ul>
 				<li><a href="index.html">Accueil</a></li>
 				<li><a href="ajout.html">Ajouter un article</a></li>
-				<li><a href="recherche.mtml">Rechercher un article</a></li>
+				<li><a href="recherche.html">Rechercher un article</a></li>
 				<li><a href="propos.html">A propos</a></li>
 			</ul>
 		</nav>
 	</header>
-	<section id="index_content">
-		<section id="article_comment">
+	<section class="content">
+		<section class="left_side">
 			<article>
 				<h1>Un réalisateur britannico-américain</h1>
 				<img width="256" alt="Christopher Nolan à Santa Barbara International Film Festival" src="assets/Christopher_nolan.jpg"/>
@@ -30,11 +30,11 @@
 				  formidine tenus iusserim custodiri.</p>
 				<a href="biographie.html">Lire la suite</a>
 			</article>
-			<section id="comment">
-				<div id="comment_header">
+			<section class="comments">
+				<div class="comment_header">
 					<h1>Dernier commentaire :</h1>
 				</div>
-				<div id="comment_content">
+				<div class="comment_content">
 					<p>Nolan-Addict 22 mars 2015 15h23</p>
 					<p>J'adore ce réalisateur, je le suis depuis ses débuts, merci pour ce blog !</p>
 				</div>
