Modifications + 1er essai en responsive design
Signed-off-by: Armays <diane.lakestani@gmail.com>

--- a/biographie.html
+++ b/biographie.html
@@ -8,7 +8,17 @@
   </head>
  <body>
 	<header>
-		<h1>Bienvenue sur notre Blog<br> de Christopher Nolan</h1>
+		<div id="bg">
+			<h1>Bienvenue sur notre Blog<br> de Christopher Nolan</h1>
+		</div>
+				<nav id="skipTo">
+			<ul>
+				<li>
+					<a href="index.html" title="Skip to Main Content">Retour à l'accueil</a>
+				</li>
+			</ul>
+		</nav>
+		
 		<nav>
 			<ul>
 				<li><a href="index.html">Accueil</a></li>
@@ -37,11 +47,11 @@
 					<h1>3 commentaires sur "Biographie de Christopher Nolan"</h1>
 				</div>
 				<div class="comment_content">
-					<p>Armays 20</p> <p>mars 2015 10h21</p>
+					<p>Armays</p> <p>22 mars 2015 10h21</p>
 					<p>J'espère que ce site vous plaira, merci pour votre attetntion. :)</p>
 				</div>
 				<div class="comment_content">
-					<p>Ephe</p> <p>21 mars 2015 11h53</p>
+					<p>Ephe</p> <p>22 mars 2015 11h53</p>
 					<p>Salut Armays c'est un bon début continue comme ça.</p>
 				</div>
 				<div class="comment_content">
