--- a/index3.html
+++ b/index3.html
@@ -2,9 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="assets/style.css">
-    <link rel="stylesheet" type="text/css" href="assets/search_style.css">
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="assets/style.css">
     <title>Blog sur Christopher Nolan</title>
   </head>
  <body>
@@ -31,25 +30,26 @@
 	</header>
 	<section class="content">
 		<section class="left_side">
-			<h1>Liste des articles</h1>
-			<table>
-				<tr>
-					<th>Titre</th>
-					<th>Date de publication</th>
-				</tr>
-				<tr>
-					<td>Biographie de Chritopher Nolan</td>
-					<td>22 Mars 2015</td>
-				</tr>
-				<tr>
-					<td>Liste des Films</td>
-					<td>23 Mars 2015</td>
-				</tr>
-				<tr>
-					<td>Critique d'Interstellar</td>
-					<td>24 Mars 2015</td>
-				</tr>
-			</table>
+			<article>
+				<h1>Un réalisateur britannico-américain</h1>
+				<img width="256" alt="Christopher Nolan à Santa Barbara International Film Festival" src="assets/Christopher_nolan.jpg"/>
+				<p>La photo est de sbclick <a href="http://creativecommons.org/licenses/by/2.0">[CC by 2.0]</a><a href="http://commons.wikimedia.org/wiki/File%3AChristopher_nolan.jpg"> via Wikimedia Commons.</a></p>
+	  
+				<p>Montius nos tumore inusitato quodam et novo ut rebellis et maiestati 
+				  recalcitrantes Augustae per haec quae strepit incusat iratus nimirum quod 
+				  contumacem praefectum, quid rerum ordo postulat ignorare dissimulantem 
+				  formidine tenus iusserim custodiri.</p>
+				<a href="biographie.html">Lire la suite</a>
+			</article>
+			<section class="comments">
+				<div class="comment_header">
+					<h1>Dernier commentaire :</h1>
+				</div>
+				<div class="comment_content">
+					<p>Nolan-Addict 22 mars 2015 15h23</p>
+					<p>J'adore ce réalisateur, je le suis depuis ses débuts, merci pour ce blog !</p>
+				</div>
+			</section>
 		</section>
 		<aside>
 			<h1>Zone de recherche</h1>
