--- a/index.html
+++ b/index.html
@@ -2,12 +2,23 @@
 <html>
   <head>
     <meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="assets/style.css">
     <title>Blog sur Christopher Nolan</title>
   </head>
  <body>
 	<header>
-		<h1>Bienvenue sur notre Blog<br> de Christopher Nolan</h1>
+		<div id="bg">
+			<h1>Bienvenue sur notre Blog<br> de Christopher Nolan</h1>
+		</div>
+				<nav id="skipTo">
+			<ul>
+				<li>
+					<a href="index.html" title="Skip to Main Content">Retour à l'accueil</a>
+				</li>
+			</ul>
+		</nav>
+		
 		<nav>
 			<ul>
 				<li><a href="index.html">Accueil</a></li>
@@ -35,7 +46,7 @@
 					<h1>Dernier commentaire :</h1>
 				</div>
 				<div class="comment_content">
-					<p>Nolan-Addict 22 mars 2015 15h23</p>
+					<p>Nolan-Addict</p> <p>22 mars 2015 15h23</p>
 					<p>J'adore ce réalisateur, je le suis depuis ses débuts, merci pour ce blog !</p>
 				</div>
 			</section>
