Finition de la page d'ajout d'article et création de la page à propos avec feuilles de style associées.
Signed-off-by: Armays <diane.lakestani@gmail.com>

--- a/biographie.html
+++ b/biographie.html
@@ -63,7 +63,7 @@
 					<form action="biographie.html">
 						<label>Nom : <input type="text" name="nom"></label>
 						<label>Adresse de contact : <input type="text" name="adresse"></label>
-						<textarea placeholder="tapez votre commentaire"></textarea>
+						<textarea placeholder="tapez votre commentaire" name="comm"></textarea>
 						<button>Laisser un commentaire</button>
 					</form>
 				</div>
