--- a/propos.html
+++ b/propos.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="assets/style.css">
-	<link rel="stylesheet" type="text/css" href="assets/add_style.css">
+	<link rel="stylesheet" type="text/css" href="assets/about_style.css">
     <title>Blog sur Christopher Nolan</title>
   </head>
  <body>
@@ -31,14 +31,15 @@
 	</header>
 	<section class="content">
 		<section class="left_side">
-			<h1>Vous pouvez ajouter un nouvel article</h1>
-			<form action="recherche.html" id="ajout">
-				<label>Titre de l'article : <input type="text" name="titre"></label>
-				<label>Résumé de l'article : <textarea name="resume" rows=2></textarea></label>
-				<label>Contenu de l'article : <textarea name="art"></textarea>
-				<label>Choisissez l'image à associer à l'article : <input type="file" method="post" enctype="multipart/form-data" name="image"></label>
-				<button>Soumettre l'article</button>
-			</form>
+			<article>
+				<h1>Un blog de geekettes !</h1>
+				<img width="256" alt="Dessin d'une fille à lunettes" src="assets/geekette.png"/>
+				<p>Nous sommes deux étudiantes de l'IUT d'informatique Année Spéciale de Lyon 1, c'est notre premier site web alors soyez indulgent !</p>
+				<p>Nous sommes fans du réalisateur Christopher Nolan car il est atypique, il aime beaucoup les détails, utilise la narration non linéaire dans ses premiers films, il fait des films très immersifs
+				Nous le suivons depuis son premier film "The Following" et nous sommes particulièrement fans de l'univers de Batman !</p>
+				<p>Si vous avez des questions ou des remarques pour améliorer notre blog, vous pouvez nous contacter à armays.world@gmail.com</p>
+				<p>Merci pour votre attention ! </p>
+			</article>
 		</section>
 		<aside>
 			<h1>Zone de recherche</h1>
