--- a/recherche.html
+++ b/recherche.html
@@ -38,7 +38,7 @@
 					<th>Date de publication</th>
 				</tr>
 				<tr>
-					<td>Biographie de Chritopher Nolan</td>
+					<td><a href="biographie.html">Biographie de Chritopher Nolan</a></td>
 					<td>22 Mars 2015</td>
 				</tr>
 				<tr>
