--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
+	/*<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />*/
     <link rel="stylesheet" type="text/css" href="assets/style.css">
     <title>Blog sur Christopher Nolan</title>
   </head>
@@ -11,7 +11,7 @@
 		<div id="bg">
 			<h1>Bienvenue sur notre Blog<br> de Christopher Nolan</h1>
 		</div>
-				<nav id="skipTo">
+		<nav id="skipTo">
 			<ul>
 				<li>
 					<a href="index.html" title="Skip to Main Content">Retour à l'accueil</a>
