Ajout de commentaires et rectification des px en pourcentages
Signed-off-by: Armays <diane.lakestani@gmail.com>

--- a/biographie.html
+++ b/biographie.html
@@ -9,7 +9,7 @@
  <body>
 	<header>
 		<div id="bg">
-			<h1>Bienvenue sur notre Blog<br> de Christopher Nolan</h1>
+			<h1>Bienvenue dans notre Blog<br> sur Christopher Nolan</h1>
 		</div>
 				<nav id="skipTo">
 			<ul>
