--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-	/*<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />*/
+	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="assets/style.css">
     <title>Blog sur Christopher Nolan</title>
   </head>
  <body>
 	<header>
 		<div id="bg">
-			<h1>Bienvenue sur notre Blog<br> de Christopher Nolan</h1>
+			<h1>Bienvenue dans notre Blog<br> sur Christopher Nolan</h1>
 		</div>
 		
 		<nav>
@@ -24,9 +24,10 @@
 	<section class="content">
 		<section class="left_side">
 			<article>
-				<h1>Un réalisateur britannico-américain</h1>
-				<img width="256" alt="Christopher Nolan à Santa Barbara International Film Festival" src="assets/Christopher_nolan.jpg"/>
-				<p>La photo est de sbclick <a href="http://creativecommons.org/licenses/by/2.0">[CC by 2.0]</a><a href="http://commons.wikimedia.org/wiki/File%3AChristopher_nolan.jpg"> via Wikimedia Commons.</a></p>
+				<figure>
+					<h1>Un réalisateur britannico-américain</h1>
+					<img alt="Christopher Nolan à Santa Barbara International Film Festival" src="assets/Christopher_nolan.jpg"/>
+				<figcaption>La photo est de sbclick <a href="http://creativecommons.org/licenses/by/2.0">[CC by 2.0]</a><a href="http://commons.wikimedia.org/wiki/File%3AChristopher_nolan.jpg"> via Wikimedia Commons.</a></figcaption>
 	  
 				<p>Montius nos tumore inusitato quodam et novo ut rebellis et maiestati 
 				  recalcitrantes Augustae per haec quae strepit incusat iratus nimirum quod 
