Responsive design de l'index fonctionnel
Signed-off-by: Armays <diane.lakestani@gmail.com>

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
  <body>
 	<header>
 		<div id="bg">
-			<h1>Bienvenue dans notre Blog<br> sur Christopher Nolan</h1>
+			<p><span id="title">Bienvenue dans notre Blog sur Christopher Nolan</span><p>
+		</div>
+		
+		<div id="bg2">
+			<p><span id="title">Bienvenue dans notre Blog sur Christopher Nolan</span><p>
 		</div>
 		
 		<nav>
@@ -24,11 +28,11 @@
 	<section class="content">
 		<section class="left_side">
 			<article>
+				<h1>Un réalisateur britannico-américain</h1>
 				<figure>
-					<h1>Un réalisateur britannico-américain</h1>
 					<img alt="Christopher Nolan à Santa Barbara International Film Festival" src="assets/Christopher_nolan.jpg"/>
-				<figcaption>La photo est de sbclick <a href="http://creativecommons.org/licenses/by/2.0">[CC by 2.0]</a><a href="http://commons.wikimedia.org/wiki/File%3AChristopher_nolan.jpg"> via Wikimedia Commons.</a></figcaption>
-	  
+					<figcaption>La photo est de sbclick <a href="http://creativecommons.org/licenses/by/2.0">[CC by 2.0]</a><a href="http://commons.wikimedia.org/wiki/File%3AChristopher_nolan.jpg"> via Wikimedia Commons.</a></figcaption>
+				</figure>
 				<p>Montius nos tumore inusitato quodam et novo ut rebellis et maiestati 
 				  recalcitrantes Augustae per haec quae strepit incusat iratus nimirum quod 
 				  contumacem praefectum, quid rerum ordo postulat ignorare dissimulantem 
@@ -53,8 +57,8 @@
 		</aside>
 	</section>
 	<footer>
-		<img alt="logo de Lyon 1" src="assets/IUTLyon1.png"/>
 		<p>HAFSI Rachida LAKESTANI Diane</p>
+		<img alt="logo de Lyon 1" src="assets/IUTLyon1.png"/>
 	</footer>
  </body>
 </html>
