Modfication de la page ajout d'article et version responsive
Signed-off-by: Armays <diane.lakestani@gmail.com>

--- a/ajout.html
+++ b/ajout.html
@@ -10,9 +10,12 @@
  <body>
 	<header>
 		<div id="bg">
-			<h1>Bienvenue dans notre Blog<br> sur Christopher Nolan</h1>
+			<p><span id="title">Bienvenue dans notre Blog sur Christopher Nolan</span><p>
 		</div>
-				
+		
+		<div id="bg2">
+			<p><span id="title">Bienvenue dans notre Blog sur Christopher Nolan</span><p>
+		</div>
 		
 		<nav>
 			<ul>
@@ -29,7 +32,7 @@
 			<form action="recherche.html" id="ajout">
 				<label>Titre de l'article : <input type="text" name="titre"></label>
 				<label>Résumé de l'article : <textarea name="resume" rows=2></textarea></label>
-				<label>Contenu de l'article : <textarea name="art"></textarea>
+				<label>Contenu de l'article : <textarea name="art"></textarea></label>
 				<label>Choisissez l'image à associer à l'article : <input type="file" method="post" enctype="multipart/form-data" name="image"></label>
 				<button>Soumettre l'article</button>
 			</form>
@@ -44,6 +47,7 @@
 	<footer>
 		<img alt="logo de Lyon 1" src="assets/IUTLyon1.png"/>
 		<p>HAFSI Rachida LAKESTANI Diane</p>
+		
 	</footer>
  </body>
 </html>
