--- a/ajout.html
+++ b/ajout.html
@@ -29,7 +29,7 @@
 	<section class="content">
 		<section class="left_side">
 			<h1>Vous pouvez ajouter un nouvel article</h1>
-			<form action="recherche.html" id="ajout">
+			<form action="recherche.html" class="formulary">
 				<label>Titre de l'article : <input type="text" name="titre"></label>
 				<label>Résumé de l'article : <textarea name="resume" rows=2></textarea></label>
 				<label>Contenu de l'article : <textarea name="art"></textarea></label>
