--- a/recherche.html
+++ b/recherche.html
@@ -10,15 +10,12 @@
  <body>
 	<header>
 		<div id="bg">
-			<h1>Bienvenue dans notre Blog<br> sur Christopher Nolan</h1>
+			<p><span id="title">Bienvenue dans notre Blog sur Christopher Nolan</span><p>
 		</div>
-				<nav id="skipTo">
-			<ul>
-				<li>
-					<a href="index.html" title="Skip to Main Content">Retour à l'accueil</a>
-				</li>
-			</ul>
-		</nav>
+		
+		<div id="bg2">
+			<p><span id="title">Bienvenue dans notre Blog sur Christopher Nolan</span><p>
+		</div>
 		
 		<nav>
 			<ul>
