--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
  <body>
 	<header>
 		<div id="bg">
-			<p><span id="title">Bienvenue dans notre Blog sur Christopher Nolan</span><p>
+			<p><span id="title1">Bienvenue dans notre Blog sur Christopher Nolan</span><p>
 		</div>
 		
 		<div id="bg2">
-			<p><span id="title">Bienvenue dans notre Blog sur Christopher Nolan</span><p>
+			<p><span id="title2">Bienvenue dans notre Blog sur Christopher Nolan</span><p>
 		</div>
 		
 		<nav>
@@ -41,7 +41,7 @@
 			</article>
 			<section class="comments">
 				<div class="comment_header">
-					<h1>Dernier commentaire :</h1>
+					<h2>Dernier commentaire :</h2>
 				</div>
 				<div class="comment_content">
 					<p>Nolan-Addict</p> <p>22 mars 2015 15h23</p>
@@ -50,7 +50,7 @@
 			</section>
 		</section>
 		<aside>
-			<h1>Zone de recherche</h1>
+			<h2>Zone de recherche</h2>
 			<form method="get" action="recherche.html">
 				<input type="search" placeholder="Entrez un mot-clef" name="the_search">
 			</form>
