--- a/propos.html
+++ b/propos.html
@@ -14,7 +14,7 @@
 		</div>
 		
 		<div id="bg2">
-			<p><span id="title">Bienvenue dans notre Blog sur Christopher Nolan</span><p>
+			<p><span id="title2">Bienvenue dans notre Blog sur Christopher Nolan</span><p>
 		</div>
 		
 		<nav>
@@ -26,8 +26,8 @@
 			</ul>
 		</nav>
 	</header>
-	<section class="content">
-		<section class="left_side">
+	<div class="content">
+		<div class="left_side">
 			<article>
 				<h1>Un blog de geekettes !</h1>
 				<img width="256" alt="Dessin d'une fille à lunettes" src="assets/geekette.png"/>
@@ -37,14 +37,14 @@
 				<p>Si vous avez des questions ou des remarques pour améliorer notre blog, vous pouvez nous contacter à armays.world@gmail.com</p>
 				<p>Merci pour votre attention ! </p>
 			</article>
-		</section>
+		</div>
 		<aside>
 			<h2>Zone de recherche</h2>
 			<form method="get" action="recherche.html">
 			<input type="search" placeholder="Entrez un mot-clef" name="the_search">
 			</form>
 		</aside>
-	</section>
+	</div>
 	<footer>
 		<img alt="logo de Lyon 1" src="assets/IUTLyon1.png"/>
 		<p>HAFSI Rachida LAKESTANI Diane</p>
