--- a/recherche.html
+++ b/recherche.html
@@ -14,7 +14,7 @@
 		</div>
 		
 		<div id="bg2">
-			<p><span id="title">Bienvenue dans notre Blog sur Christopher Nolan</span><p>
+			<p><span id="title2">Bienvenue dans notre Blog sur Christopher Nolan</span><p>
 		</div>
 		
 		<nav>
@@ -26,7 +26,7 @@
 			</ul>
 		</nav>
 	</header>
-	<section class="content">
+	<div class="content">
 		<section class="left_side">
 			<h1>Liste des articles</h1>
 			<table>
@@ -54,7 +54,7 @@
 			<input type="search" placeholder="Entrez un mot-clef" name="the_search">
 			</form>
 		</aside>
-	</section>
+	</div>
 	<footer>
 		<img alt="logo de Lyon 1" src="assets/IUTLyon1.png"/>
 		<p>HAFSI Rachida LAKESTANI Diane</p>
