--- a/biographie.html
+++ b/biographie.html
@@ -14,7 +14,7 @@
 		</div>
 		
 		<div id="bg2">
-			<p><span id="title">Bienvenue dans notre Blog sur Christopher Nolan</span><p>
+			<p><span id="title2">Bienvenue dans notre Blog sur Christopher Nolan</span><p>
 		</div>
 		
 		<nav>
@@ -26,8 +26,8 @@
 			</ul>
 		</nav>
 	</header>
-	<section class="content">
-		<section class="left_side">
+	<div class="content">
+		<div class="left_side">
 			<article>
 				<h1>Biographie de Christopher Nolan</h1>
 				<figure>
@@ -40,10 +40,10 @@
 
 				<p>Nam bibendum posuere condimentum. Mauris finibus lorem a felis efficitur euismod. Donec ullamcorper euismod euismod. Pellentesque vel mollis ipsum. Aliquam ultricies maximus lectus, a congue risus finibus vitae. Nunc non nulla commodo, fringilla elit quis, facilisis dolor. Nam tincidunt lacinia lectus in rhoncus. Fusce eu gravida nulla, eu faucibus magna. Donec fringilla lacus nec massa ultrices, et rhoncus leo condimentum. Curabitur sodales sem at scelerisque convallis.</p> 
 			</article>
-			<section class="comments">
-				<div class="comment_header">
+			<div class="comments">
+				<section class="comment_header">
 					<h2>3 commentaires sur "Biographie de Christopher Nolan"</h2>
-				</div>
+				</section>
 				<div class="comment_content">
 					<p>Armays</p> <p>22 mars 2015 10h21</p>
 					<p>J'espère que ce site vous plaira, merci pour votre attetntion. :)</p>
@@ -65,15 +65,15 @@
 						<button>Laisser un commentaire</button>
 					</form>
 				</div>
-			</section>
-		</section>
+			</div>
+		</div>
 		<aside>
 			<h2>Zone de recherche</h2>
 			<form method="get" action="recherche.html">
 				<input type="search" placeholder="Entrez un mot-clef" name="the_search">
 			</form>
 		</aside>
-	</section>
+	</div>
 	<footer>
 		<img alt="logo de Lyon 1" src="assets/IUTLyon1.png"/>
 		<p>HAFSI Rachida LAKESTANI Diane</p>
