--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 			</ul>
 		</nav>
 	</header>
-	<section class="content">
-		<section class="left_side">
+	<div class="content">
+		<div class="left_side">
 			<article>
 				<h1>Un réalisateur britannico-américain</h1>
 				<figure>
@@ -39,23 +39,23 @@
 				  formidine tenus iusserim custodiri.</p>
 				<a href="biographie.html">Lire la suite</a>
 			</article>
-			<section class="comments">
-				<div class="comment_header">
+			<div class="comments">
+				<section class="comment_header">
 					<h2>Dernier commentaire :</h2>
-				</div>
+				</section>
 				<div class="comment_content">
 					<p>Nolan-Addict</p> <p>22 mars 2015 15h23</p>
 					<p>J'adore ce réalisateur, je le suis depuis ses débuts, merci pour ce blog !</p>
 				</div>
-			</section>
-		</section>
+			</div>
+		</div>
 		<aside>
 			<h2>Zone de recherche</h2>
 			<form method="get" action="recherche.html">
 				<input type="search" placeholder="Entrez un mot-clef" name="the_search">
 			</form>
 		</aside>
-	</section>
+	</div>
 	<footer>
 		<img alt="logo de Lyon 1" src="assets/IUTLyon1.png"/>
 		<p>HAFSI Rachida LAKESTANI Diane</p>
